# rust-game-of-life

./: Cargo.toml  README.md
src/: game_of_life.rs  main.rs  opengl_ui.rs  rectangle_program.rs  shader.rs  shell_ui.rs
src/shaders/: rect.vs
